fix: adjust mobile spacing and fix blog posts mapping
Update mobile view spacing in home page styles to improve layout
Fix posts mapping in BlogDetails component to access nested posts array

--- a/src/assets/styles/scss/_home.scss
+++ b/src/assets/styles/scss/_home.scss
@@ -22,7 +22,7 @@
 
       @media screen and (max-width: 576px) {
         font-size: 22px;
-        margin-top: -208px;
+        margin-top: -160px;
       }
     }
 
@@ -163,7 +163,7 @@
   z-index: 99;
 
   @media screen and (max-width: 576px) {
-    bottom: -232px;
+    bottom: -282px;
   }
 }
 
